# cifar10-pipeline

./: .gitignore  README.md  main.py  pyproject.toml
configs/: deep_cnn.yaml  model.yaml
data/: README.md
scripts/: test.py  train.py
src/data/: dataset.py
src/model_zoo/: deep_cnn.py
src/utils/: config.py
tests/: __init__.py  test_basic.py
