[project]
name = "pipeline-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "mlflow>=3.2.0",
    "numpy>=2.3.2",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
